# FileEcho

./: .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  FileEcho.aps  LICENSE  README.en.md  README.md  README_zh.md  USER_MANUAL.md  build_release.bat  generate_resources.py  installer.nsi  pack_assets.py
include/FileEcho/: ai_handler.hpp  doc_extractor.hpp  frontend_resources.hpp  pdf_extractor.hpp  utils.hpp  webserver.hpp
resources/: FileEcho.manifest  FileEcho.rc
src/backend/: ai_handler.cpp  assets.hpp  doc_extractor.cpp  filesystem.cpp  filesystem.hpp  main.cpp  pdf_extractor.cpp  webserver.cpp  webserver.hpp
src/frontend/: ai_addon.css  ai_addon.js  index.html  script.js  style.css
